--- a/includes/css/login.css
+++ b/includes/css/login.css
@@ -132,20 +132,21 @@ a {
 }
 
 .btn-blue {
-    background-color: #1A237E;
+    background-color: lightblue;
     width: 150px;
     color: #fff;
     border-radius: 2px
 }
 
 .btn-blue:hover {
-    background-color: #000;
-    cursor: pointer
+  color: white;
+    background-color: blue;
+    cursor: pointer;
 }
 
 .bg-blue {
     color: #fff;
-    background-color: #1A237E
+    background-color: lightblue;
 }
 
 @media screen and (max-width: 991px) {
